[gd_scene load_steps=10 format=3 uid="uid://c0e1f14uhvwii"]

[ext_resource type="Script" uid="uid://beuidxkx7ptvf" path="res://Scripts/circle_shield_segment.gd" id="1_3l8xv"]
[ext_resource type="PackedScene" uid="uid://b4r3004pbyfho" path="res://Scenes/Components/hurtbox.tscn" id="2_xt81c"]
[ext_resource type="Texture2D" uid="uid://cr0bldiqlf7d7" path="res://Assets/Sprites/CircleShieldLayer-Sheet.png" id="3_xt81c"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wsw5k"]
atlas = ExtResource("3_xt81c")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v41dj"]
atlas = ExtResource("3_xt81c")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ww2vs"]
atlas = ExtResource("3_xt81c")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpx02"]
atlas = ExtResource("3_xt81c")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_jh3en"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wsw5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v41dj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ww2vs")
}],
"loop": false,
"name": &"Hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpx02")
}],
"loop": false,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_xt81c"]
radius = 18.0

[node name="CircleShieldSegment" type="Node2D"]
script = ExtResource("1_3l8xv")

[node name="Hurtbox" parent="." instance=ExtResource("2_xt81c")]
collision_mask = 2

[node name="ShieldSegmentSprite" type="AnimatedSprite2D" parent="Hurtbox"]
sprite_frames = SubResource("SpriteFrames_jh3en")
animation = &"Idle"
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_xt81c")

[node name="ShieldBreakTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="ShieldBreakTimer" to="." method="_on_shield_break_timer_timeout"]
